--- a/package.json
+++ b/package.json
@@ -4,20 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Andy Nicholson",
-  "license": "MIT",
-  "private": true,
-  "scripts": {
     "build": "webpack",
     "watch": "webpack --watch",
     "dev": "webpack-dev-server --port 3000"
   },
+  "author": "Andy Nicholson",
+  "license": "MIT",
+  "private": true,
   "dependencies": {
+    "bulma": "^0.1.2",
+    "elm-webpack-loader": "^3.0.3",
     "file-loader": "^0.8.5",
     "webpack": "^1.12.0",
-    "webpack-dev-server": "^1.14.0",
-    "elm-webpack-loader": "^3.0.3"
+    "webpack-dev-server": "^1.14.0"
+  },
+  "devDependencies": {
+    "css-loader": "^0.23.1",
+    "node-sass": "^3.8.0",
+    "sass-loader": "^4.0.0",
+    "style-loader": "^0.13.1"
   }
 }
