--- a/server/shard.yml
+++ b/server/shard.yml
@@ -5,3 +5,8 @@ authors:
   - Andy Nicholson <andrew@anicholson.net>
 
 license: MIT
+
+dependencies:
+  kemal:
+    github: sdogruyol/kemal
+    branch: master
