--- a/server/shard.yml
+++ b/server/shard.yml
@@ -10,3 +10,6 @@ dependencies:
   kemal:
     github: sdogruyol/kemal
     branch: master
+  spec2:
+    github: waterlink/spec2.cr
+    version: ~> 0.9
